--- a/InternetAuction.BLL/packages.config
+++ b/InternetAuction.BLL/packages.config
@@ -2,8 +2,10 @@
 <packages>
   <package id="AutoMapper" version="8.0.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net461" />
+  <package id="FluentValidation" version="8.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.2" targetFramework="net461" />
   <package id="Ninject" version="3.3.4" targetFramework="net461" />
+  <package id="System.ComponentModel.Annotations" version="4.4.1" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
