--- a/InternetAuction.WEB/packages.config
+++ b/InternetAuction.WEB/packages.config
@@ -46,6 +46,7 @@
   <package id="Ninject.Web.Common.WebHost" version="3.3.1" targetFramework="net461" />
   <package id="Ninject.Web.WebApi" version="3.3.0" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="System.ComponentModel.Annotations" version="4.4.1" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
   <package id="SystemWeb" version="1.0.0" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net461" />
