--- a/InternetAuction.WEB/Web.config
+++ b/InternetAuction.WEB/Web.config
@@ -109,6 +109,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=DESKTOP-O5IOFHF\SQLEXPRESS;Initial Catalog=AuctionDb;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=AuctionDb;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
