--- a/InternetAuction.BLL/InternetAuction.BLL.csproj
+++ b/InternetAuction.BLL/InternetAuction.BLL.csproj
@@ -74,15 +74,24 @@
     <Compile Include="DTO\ImageDTO.cs" />
     <Compile Include="DTO\LotDTO.cs" />
     <Compile Include="DTO\UserDTO.cs" />
+    <Compile Include="Infrastructure\BetEditValidator.cs" />
     <Compile Include="Infrastructure\BetValidator.cs" />
+    <Compile Include="Infrastructure\CategoryEditValidator.cs" />
     <Compile Include="Infrastructure\CategoryValidator.cs" />
     <Compile Include="Infrastructure\ImageValidator.cs" />
+    <Compile Include="Infrastructure\LotEditValidator.cs" />
     <Compile Include="Infrastructure\LotValidator.cs" />
     <Compile Include="Infrastructure\OperationDetails.cs" />
     <Compile Include="Infrastructure\ServiceModule.cs" />
     <Compile Include="Infrastructure\UserValidator.cs" />
-    <Compile Include="Infrastructure\ValidationException.cs" />
     <Compile Include="Interfaces\IAuctionService.cs" />
+    <Compile Include="Interfaces\IBetEditValidator.cs" />
+    <Compile Include="Interfaces\IBetValidator.cs" />
+    <Compile Include="Interfaces\ICategoryEditValidator.cs" />
+    <Compile Include="Interfaces\ICategoryValidator.cs" />
+    <Compile Include="Interfaces\IImageValidator.cs" />
+    <Compile Include="Interfaces\ILotEditValidator.cs" />
+    <Compile Include="Interfaces\ILotValidator.cs" />
     <Compile Include="Interfaces\IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AuctionService.cs" />
