--- a/InternetAuction.BLL/packages.config
+++ b/InternetAuction.BLL/packages.config
@@ -5,7 +5,12 @@
   <package id="FluentValidation" version="8.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.2" targetFramework="net461" />
+  <package id="Microsoft.Owin" version="4.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security" version="4.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security.OAuth" version="4.0.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net461" />
   <package id="Ninject" version="3.3.4" targetFramework="net461" />
+  <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="System.ComponentModel.Annotations" version="4.4.1" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
