--- a/InternetAuction.WEB/packages.config
+++ b/InternetAuction.WEB/packages.config
@@ -12,6 +12,7 @@
   <package id="Microsoft.ApplicationInsights.Web" version="2.5.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.5.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.5.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.2" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.2" targetFramework="net461" />
@@ -35,6 +36,7 @@
   <package id="Microsoft.AspNet.WebPages.ru" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Owin" version="4.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Cors" version="4.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security" version="4.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net461" />
