--- a/InternetAuction.WEB/InternetAuction.WEB.csproj
+++ b/InternetAuction.WEB/InternetAuction.WEB.csproj
@@ -250,17 +250,14 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
-    <Compile Include="Controllers\AccountsController.cs" />
+    <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Controllers\BetsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LotsController.cs" />
     <Compile Include="Controllers\CategoriesController.cs" />
-    <Compile Include="Interfaces\IOAuthAuthorizationServerOptions.cs" />
     <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Models\RegisterModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Providers\MyOAuthAuthorizationServerOptions.cs" />
-    <Compile Include="Providers\SimpleAuthorizationServerProvider.cs" />
     <Compile Include="Utils\AuctionModule.cs" />
   </ItemGroup>
   <ItemGroup>
