--- a/InternetAuction.BLL/InternetAuction.BLL.csproj
+++ b/InternetAuction.BLL/InternetAuction.BLL.csproj
@@ -84,24 +84,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DTO\BetDTO.cs" />
-    <Compile Include="DTO\CategoryDTO.cs" />
-    <Compile Include="DTO\ImageDTO.cs" />
-    <Compile Include="DTO\LotDTO.cs" />
-    <Compile Include="DTO\UserDTO.cs" />
+    <Compile Include="DTO\BetDto.cs" />
+    <Compile Include="DTO\CategoryDto.cs" />
+    <Compile Include="DTO\ImageDto.cs" />
+    <Compile Include="DTO\LotDto.cs" />
+    <Compile Include="DTO\UserDto.cs" />
     <Compile Include="Infrastructure\AutoMapperConfig.cs" />
-    <Compile Include="Infrastructure\BetEditValidator.cs" />
     <Compile Include="Infrastructure\BetValidator.cs" />
     <Compile Include="Infrastructure\CategoryEditValidator.cs" />
     <Compile Include="Infrastructure\CategoryValidator.cs" />
     <Compile Include="Infrastructure\ImageValidator.cs" />
     <Compile Include="Infrastructure\LotEditValidator.cs" />
     <Compile Include="Infrastructure\LotValidator.cs" />
-    <Compile Include="Infrastructure\OperationDetails.cs" />
     <Compile Include="Infrastructure\ServiceModule.cs" />
     <Compile Include="Infrastructure\UserValidator.cs" />
     <Compile Include="Interfaces\IAuctionService.cs" />
-    <Compile Include="Interfaces\IBetEditValidator.cs" />
     <Compile Include="Interfaces\IBetValidator.cs" />
     <Compile Include="Interfaces\ICategoryEditValidator.cs" />
     <Compile Include="Interfaces\ICategoryValidator.cs" />
@@ -109,6 +106,7 @@
     <Compile Include="Interfaces\ILotEditValidator.cs" />
     <Compile Include="Interfaces\ILotValidator.cs" />
     <Compile Include="Interfaces\IUserService.cs" />
+    <Compile Include="Interfaces\IUserValidator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AuctionService.cs" />
     <Compile Include="Services\UserService.cs" />
